# nebula_chat

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  TOOL_MESSAGE_FIX.md  WARP.md  cleanup_tool_messages.html  conversation_ee284b21-e803-4142-b973-b567f54b9134.json  deepseek-v3.1-terminus:exacto_2026-01-11T02-45-35.json  index.html  kimi-k2-0905:exacto_2026-01-10T16-15-49.json  memory-fix.md  memory-redesign.md  mermaid-plan.md  mitigation-zen.md  nebula_hld_0.6.md  package-lock.json  package.json  remediation.md  review.md  settings_dump.json  settings_fix.md  tailwind.config.js  vite.config.ts
.claude/commands/: bump-version.md
.github/workflows/: beta.yml  release.yml
.serena/: project.yml
docs/: bug_scrub.md  dev_smoke_test.md  features.md  memory2-revised.md  memory3-redesign.md  nebula_hld_0.6.md  obsolete-mem2-plan.md  prompt-caching-plan.md  test_coverage_analysis.md  update_plan.md
docs/superpowers/plans/: 2026-05-20-tasks-checklist.md  2026-05-22-right-rail-panel.md  2026-06-10-ink-themes.md  2026-06-10-provider-emoji-and-name-in-model-selector.md  2026-06-18-claude-skills-import.md  2026-07-07-generation-info-hover.md
docs/superpowers/specs/: 2026-05-20-tasks-checklist-design.md  2026-05-22-right-rail-panel-design.md  2026-06-10-ink-themes-design.md  2026-06-10-provider-emoji-and-name-in-model-selector-design.md  2026-06-18-claude-skills-import-design.md  2026-07-07-generation-info-hover-design.md  slash-commands.md
src/: App.css  App.tsx  index.css  main.tsx  metrics.rs  themes.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  kimi-k2-0905:exacto_2026-01-10T16-56-35.json  tasks.json  tauri.conf.json
src-tauri/:memory:/: nebula.db
src-tauri/:memory:/fulltext_index/: meta.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/llm/: anthropic.rs  capabilities.rs  compactor.rs  context.rs  context_assembler.rs  factory.rs  mod.rs  ollama.rs  openai.rs  provider.rs  think_tag.rs  tokenizer.rs  tool_shaping.rs
src-tauri/src/mcp/: builtin_prompts.rs  client.rs  config.rs  manager.rs  mod.rs
src-tauri/src/memory/: audit_logger.rs  extraction.rs  librarian.rs  maintenance.rs  mod.rs  sqlite_manager.rs  strategist.rs  tantivy_index.rs
src-tauri/src/memory/docs/: api.rs  builtins.rs  chunker.rs  inject.rs  links.rs  mod.rs  retrieval.rs  store.rs  tools.rs  watcher.rs
src-tauri/src/memory/docs/embedding/: fastembed_provider.rs  mod.rs  remote.rs
src-tauri/src/security/: keychain.rs
src-tauri/src/skills/: api.rs  builtins.rs  mod.rs  store.rs  tools.rs  watcher.rs
src-tauri/src/tasks/: mod.rs
src-tauri/tests/: csp_test.rs  sse_cancellation_test.rs  tantivy_performance_test.rs  tantivy_smoke_test.rs  tasks_integration_test.rs  tool_validation_test.rs
src/components/: ChatInterface.tsx  ConversationList.tsx  MemoryPanel.tsx  PromptsSettings.tsx  ProvidersSettings.tsx  RightRail.tsx  SettingsPage.tsx  SkillsSettings.tsx  TasksPanel.tsx  ThemeSelector.tsx  ToolsPanel.tsx
src/components/ui/: CustomSelect.tsx
src/contexts/: ThemeContext.tsx
src/migration/: mod.rs
src/provider/: helpers.rs
src/settings/: mod.rs
src/utils/: chatCommands.ts  providerIcons.ts
