[package]
name = "tauri-appnebula"
version = "0.8.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-appnebula"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appnebula_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
base64 = "0.22"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
tantivy = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tiktoken-rs = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
keyring = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Phase 1 of memory3 redesign: docs subsystem.
# fastembed pulls in ONNX runtime via the `ort` crate, which fetches a static
# binary at build time. That fetch can fail in restricted networks, so we
# feature-gate the local embedding backend behind `local-embeddings` (on by
# default). Builds in offline environments can pass `--no-default-features
# --features tauri-default` to compile-check the rest of the tree.
fastembed = { version = "4", optional = true }
rayon = "1.10"
notify = "6"
gray_matter = "0.2"
serde_yaml = "0.9"
regex = "1"
sha2 = "0.10"

[features]
default = ["local-embeddings"]
local-embeddings = ["dep:fastembed"]
tauri-default = []

[dev-dependencies]
tempfile = "3"
